--- a/src/siene/loading-and-po/loading-layer/loading-and-po.component.css
+++ b/src/siene/loading-and-po/loading-layer/loading-and-po.component.css
@@ -12,6 +12,12 @@
   background-color: black;
   opacity: 0.5;
 }
+.loadingPictureBg{
+  position: absolute;
+  top:0px;
+  left: 0px;
+  width: 750px;
+}
 .loadingPicture{
   position: absolute;
   left: 50%;
