--- a/src/siene/loading-and-po/loading-layer/loading-and-po.component.html
+++ b/src/siene/loading-and-po/loading-layer/loading-and-po.component.html
@@ -4,12 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-20 10:43:20
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-22 15:56:45
+ * @LastEditTime: 2021-07-29 10:44:37
 -->
 <div class="loadingContainer" [style.height]="mainHeight+'px'" [style.background-image]="loadingBg" [hidden]="!showingLoadingBg">
   <div class="loadingShadow"></div>
   <app-popup-layer></app-popup-layer>
-  <div class="loadingPicture" [hidden]="!showLoadingGif">
-    <img src="assets/loading_ui/loading.gif" alt="">
+  <div class="loadingPictureBg" [hidden]="!showLoadingGif" [style.height]="mainHeight+'px'">
+    <img src="assets/loading_ui/loading.gif" alt="" class="loadingPicture">
   </div>
 </div>
