--- a/src/popups/vip-pass/vip-pass.component.html
+++ b/src/popups/vip-pass/vip-pass.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-16 11:54:28
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-23 11:42:28
+ * @LastEditTime: 2021-07-29 15:15:15
 -->
 <div class="vipPass" [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
@@ -14,7 +14,7 @@
   <app-image [imgData]="exchange"></app-image>
   <app-image [imgData]="shipment"></app-image>
   <app-image [imgData]="premium"></app-image>
-  <app-image-button [imgData]="buyBtn"></app-image-button>
+  <app-image-button [imgData]="buyBtn" (itemClick)="buyVip()"></app-image-button>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()"></app-image-button>
   <div class="priceTextDiv">
   <app-popup-text-field [textData]="priceText" [text]="'$' + vipPrice"></app-popup-text-field>
