--- a/src/siene/loading-and-po/popup-layer/popup-layer.component.html
+++ b/src/siene/loading-and-po/popup-layer/popup-layer.component.html
@@ -6,6 +6,6 @@
  * @LastEditors: Wayne Yu
  * @LastEditTime: 2021-07-14 13:46:08
 -->
-<div class="popupLayer" id="popupLayer">
+<div class="popupLayer" id="popupLayer" [@carousel]="carouselState">
   <ng-template popupContainer></ng-template>
 </div>
