--- a/src/basicUI/image-scale-button/image-scale-button.component.html
+++ b/src/basicUI/image-scale-button/image-scale-button.component.html
@@ -1,4 +1,12 @@
+<!--
+ * @Description: 
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-06-29 14:45:12
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-08-02 17:08:46
+-->
 <div class="imgBtn" [attr.style]="imgStyle" (click)="onButtonClick()" (mousedown)="onDown($event)" (touchstart)="onDown($event)"
  (mouseup)="onUp($event)" (mouseout)="onUp($event)" (touchend)="onUp($event)" (touchcancel)="onUp($event)">
-  <div class="imgIcon" [attr.style]="iconStyle"></div>
+  <div class="imgIcon" [attr.style]="iconStyle" [@carousel]="carouselState"></div>
 </div>
