--- a/src/siene/loading-and-po/loading-layer/loading-and-po.component.html
+++ b/src/siene/loading-and-po/loading-layer/loading-and-po.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-20 10:43:20
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-29 10:44:37
+ * @LastEditTime: 2021-08-06 13:41:58
 -->
-<div class="loadingContainer" [style.height]="mainHeight+'px'" [style.background-image]="loadingBg" [hidden]="!showingLoadingBg">
+<div class="loadingContainer" [style.height]="mainHeight+'px'" [style.background-image]="loadingBg" [hidden]="!showingLoading">
   <div class="loadingShadow"></div>
   <app-popup-layer></app-popup-layer>
   <div class="loadingPictureBg" [hidden]="!showLoadingGif" [style.height]="mainHeight+'px'">
