--- a/src/siene/video/video/video.component.html
+++ b/src/siene/video/video/video.component.html
@@ -4,10 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 16:46:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-08-06 15:46:10
+ * @LastEditTime: 2021-08-09 17:54:33
 -->
 <div class="videoFrame">
-    <iframe src="" width="750" height="{{iframeHeight}}" id="videoFrame" scrolling="no" *ngIf="!videoLoading"></iframe>
+    <iframe src="" width="750" height="{{iframeHeight}}" id="videoFrame" scrolling="no" [hidden]="videoLoading"></iframe>
     <img src="assets/control_bar/tv.gif" class="tvGif" [style.top]="tvPositionY + 'px'" *ngIf="videoLoading"/>
 </div>
 <app-head-bar></app-head-bar>
