--- a/src/popups/vip-pass/vip-pass.component.html
+++ b/src/popups/vip-pass/vip-pass.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-16 11:54:28
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-08-02 16:42:30
+ * @LastEditTime: 2021-08-19 17:48:31
 -->
 <div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
@@ -12,13 +12,11 @@
   <app-image [imgData]="tokens"></app-image>
   <app-image [imgData]="free"></app-image>
   <app-image [imgData]="exchange"></app-image>
-  <app-image [imgData]="shipment"></app-image>
-  <app-image [imgData]="premium"></app-image>
   <app-image-button [imgData]="buyBtn" (itemClick)="buyVip()"></app-image-button>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()"></app-image-button>
   <div class="priceTextDiv">
   <app-popup-text-field [textData]="priceText" [text]="'$' + vipPrice"></app-popup-text-field>
-  <app-popup-text-field [textData]="coinsText" [text]="'' + vipCoins"></app-popup-text-field>
-  <app-popup-text-field [textData]="daysText" [text]="'' + vipDays"></app-popup-text-field>
+  <app-popup-text-field [textData]="coinsText" [text]="'' + vipCoins" *ngIf="hasCoinText"></app-popup-text-field>
+  <app-popup-text-field [textData]="daysText" [text]="'' + vipDays"  *ngIf="hasDaysText"></app-popup-text-field>
     </div>
 </div>
