--- a/src/popups/vip-pass/vip-pass.component.html
+++ b/src/popups/vip-pass/vip-pass.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-07-16 11:54:28
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-08-19 17:48:31
+ * @LastEditTime: 2021-08-20 14:43:59
 -->
 <div [style.marginLeft]="-this.marginLeft+'px'" [style.marginTop]="-this.marginTop+'px'">
   <img [src]="textureDetactive" (load)="bgTextureLoaded()" [hidden]="true"/>
@@ -15,7 +15,7 @@
   <app-image-button [imgData]="buyBtn" (itemClick)="buyVip()"></app-image-button>
   <app-image-button [imgData]="closeBtn" (itemClick)="closePo()"></app-image-button>
   <div class="priceTextDiv">
-  <app-popup-text-field [textData]="priceText" [text]="'$' + vipPrice"></app-popup-text-field>
+  <app-popup-text-field [textData]="priceText" [text]="'$' + vipPrice + '/mo'"></app-popup-text-field>
   <app-popup-text-field [textData]="coinsText" [text]="'' + vipCoins" *ngIf="hasCoinText"></app-popup-text-field>
   <app-popup-text-field [textData]="daysText" [text]="'' + vipDays"  *ngIf="hasDaysText"></app-popup-text-field>
     </div>
