--- a/src/siene/loading-and-po/loading-layer/loading-and-po.component.css
+++ b/src/siene/loading-and-po/loading-layer/loading-and-po.component.css
@@ -20,7 +20,9 @@
 .loadingPicture{
   position: absolute;
   left: 50%;
-	top: 60%;
-  margin-left: -55px;
-  margin-top: -55px;
+  top: 50%;
+  width: 150px;
+  height: 166px;
+  margin-left: -75px;
+  margin-top: -83px;
 }
