--- a/src/service/ui/head-bar/head-bar.component.html
+++ b/src/service/ui/head-bar/head-bar.component.html
@@ -4,12 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 13:36:53
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-02 10:48:27
+ * @LastEditTime: 2021-08-25 11:35:38
 -->
 <div class="head">
   <app-image [imgData]="topBarBg"></app-image>
   <div class="facebookHead">
-    <img src="{{headIcon}}">
+    <img src="{{headIcon}}" width="80" height="80">
   </div>
   <app-image [imgData]="headMask"></app-image>
   <app-image [imgData]="vipIcon" *ngIf="isVip"></app-image>
