--- a/src/popups/daily-bonus/daily-item/daily-item.component.html
+++ b/src/popups/daily-bonus/daily-item/daily-item.component.html
@@ -4,11 +4,14 @@
  * @Author: Wayne Yu
  * @Date: 2021-08-25 16:44:20
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-08-26 10:23:24
+ * @LastEditTime: 2021-08-26 11:26:30
 -->
 <div [style.top]="position.y+'px'" [style.left]="position.x+'px'">
   <app-image [imgData]="dailyItemBg"></app-image>
   <app-image [imgData]="coinIcon"></app-image>>
   <app-popup-text-field [textData]="titleText" [text]="'Day ' + iNumber"></app-popup-text-field>
-  <app-popup-text-field [textData]="coinText" [text]="'x ' + dailyCoin"></app-popup-text-field>
+  <app-popup-text-field [textData]="coinText" [text]="'x ' + itemData"></app-popup-text-field>
+  <img src="assets/daily_bonus/hand.gif" class="handImg" *ngIf="showHand">
+  <div class="passedMask" *ngIf="showMask"></div>
+  <app-image [imgData]="greenCheck" *ngIf="showMask"></app-image>>
 </div>
