getting daily bonus green check

--- a/src/popups/daily-bonus/daily-item/daily-item.component.css
+++ b/src/popups/daily-bonus/daily-item/daily-item.component.css
@@ -14,3 +14,8 @@
     -webkit-border-radius: 15px;
     border-radius:15px;
 }
+.gettingDailyBonusGreenCheck{
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
