--- a/src/popups/daily-bonus/daily-item/daily-item.component.html
+++ b/src/popups/daily-bonus/daily-item/daily-item.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-08-25 16:44:20
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-08-26 11:48:26
+ * @LastEditTime: 2021-08-26 11:59:19
 -->
 <div [style.top]="position.y+'px'" [style.left]="position.x+'px'">
   <app-image [imgData]="dailyItemBg"></app-image>
@@ -15,4 +15,5 @@
   <div class="passedMask" *ngIf="showMask"></div>
   <app-image [imgData]="greenCheck" *ngIf="showMask"></app-image>
   <img src="assets/daily_bonus/bones gif.gif" class="gettingDailyBonusGreenCheck" *ngIf="gettingDailyBonus">
+  <app-image-button [imgData]="clickArea" *ngIf="canGetBonus"></app-image-button>
 </div>
