--- a/src/basicUI/movie-clip/movie-clip.component.html
+++ b/src/basicUI/movie-clip/movie-clip.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-08-27 13:01:23
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-08-27 13:57:40
+ * @LastEditTime: 2021-08-27 15:33:01
 -->
-<div class="mc" [style.width]="movieClipTexture.width" [style.width]="movieClipTexture.height" [style.left]="x" [style.top]="y">
-  <img [src]="textureData" (load)="bgTextureLoaded()"/>
+<div class="mc" [style.width]="width+'px'" [style.height]="height+'px'" [style.left]="x+'px'" [style.top]="y+'px'" #mc>
+  <img [src]="movieClipData" (load)="bgTextureLoaded()"/>
 </div>
