--- a/src/basicUI/movie-clip/movie-clip.component.html
+++ b/src/basicUI/movie-clip/movie-clip.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-08-27 13:01:23
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-08-27 15:33:01
+ * @LastEditTime: 2021-08-30 15:29:26
 -->
-<div class="mc" [style.width]="width+'px'" [style.height]="height+'px'" [style.left]="x+'px'" [style.top]="y+'px'" #mc>
+<div class="mc" [style.width]="width+'px'" [style.height]="height+'px'" [style.left]="x+'px'" [style.top]="y+'px'" [style.transform]="matrix" #mc>
   <img [src]="movieClipData" (load)="bgTextureLoaded()"/>
 </div>
