flying coins layer

--- a/src/service/ui/coin/coin.component.html
+++ b/src/service/ui/coin/coin.component.html
@@ -4,8 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-08-30 13:47:49
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-08-30 15:48:05
+ * @LastEditTime: 2021-08-30 17:06:50
 -->
-<div class="mc" [style.width]="width+'px'" [style.height]="height+'px'" [style.left]="x+'px'" [style.top]="y+'px'" [style.transform]="matrix" #mc>
+<div class="mc" [style.left]="x+'px'" [style.top]="y+'px'" [style.transform]="matrix" #mc>
   <img [src]="movieClipData" (load)="bgTextureLoaded()"/>
 </div>
