--- a/src/service/ui/coin/coin.component.css
+++ b/src/service/ui/coin/coin.component.css
@@ -4,4 +4,8 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     pointer-events: none;
+    width: 180px;
+    height: 180px;
+    margin-top: -90px;
+    margin-left: -90px;
 }
