--- a/src/siene/flying-coins/flying-coins.component.html
+++ b/src/siene/flying-coins/flying-coins.component.html
@@ -4,6 +4,8 @@
  * @Author: Wayne Yu
  * @Date: 2021-08-30 16:11:04
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-08-30 17:42:15
+ * @LastEditTime: 2021-08-31 09:57:08
 -->
-<app-coin [movieClip]="item" *ngFor="let item of coinsFly"></app-coin>
+<div>
+    <app-coin [movieClip]="item" *ngFor="let item of coinShowing"></app-coin>
+</div>
