--- a/src/service/ui/bottom-bar/bottom-bar.component.html
+++ b/src/service/ui/bottom-bar/bottom-bar.component.html
@@ -1,7 +1,15 @@
+<!--
+ * @Description: 
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-08-06 11:27:57
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-09-02 11:26:39
+-->
 <div class="bottom_bar">
   <app-image [imgData]="bottomBg"></app-image>
   <app-image [imgData]="home"></app-image>
-  <app-image [imgData]="shop"></app-image>
+  <app-image-button [imgData]="shop" (itemClick)="gotoBank()"></app-image-button>
   <app-image [imgData]="rank"></app-image>
   <app-image-button [imgData]="my" (itemClick)="logout()" ></app-image-button>
 </div>
