--- a/src/siene/shop/shop.component.html
+++ b/src/siene/shop/shop.component.html
@@ -4,7 +4,12 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-01 17:54:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-02 11:15:08
+ * @LastEditTime: 2021-09-02 15:23:13
 -->
-<app-head-bar></app-head-bar>
-<app-bottom-bar></app-bottom-bar>
+<div class="bankContainer" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/bank/bank_bg.jpg)'">
+    <div class="listBg" [style.height]="pageHeight - 270 + 'px'" [style.background-image]="'url(assets/bank/coins.png)'"></div>
+    <div></div>
+    <div></div>
+    <app-head-bar></app-head-bar>
+    <app-bottom-bar></app-bottom-bar>
+</div>
