--- a/src/siene/lobby/product-list/product-list.component.html
+++ b/src/siene/lobby/product-list/product-list.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-04 10:57:58
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-07-22 17:53:22
+ * @LastEditTime: 2021-09-03 09:55:04
 -->
 <div class="productListContainer" [style.height]="listHeight - 365 + 'px'" [style.background-image]="'url(assets/product_list/bg.png)'">
   <div class="productListBar" [style.height]="listHeight - 580 + 'px'" id="productListBarDiv">
@@ -12,5 +12,8 @@
       <app-product-item *ngFor="let item of machines | slice : 0 : pageSize; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-product-item>
     </div>
   </div>
-  <app-image *ngFor="let icon of iconList"  [imgData]="icon"></app-image>
+  <div>
+    <app-image [imgData]="iconListBg"></app-image>
+    <div *ngFor="let icon of categoryList; let i = index" class="categoryIcon" [style.left]="i * 160 + 'px'"><img [src]="icon.class_img" width="150"></div>
+  </div>
 </div>
