mask of category

--- a/src/siene/lobby/product-list/product-list.component.html
+++ b/src/siene/lobby/product-list/product-list.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-04 10:57:58
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-03 09:55:04
+ * @LastEditTime: 2021-09-03 10:18:53
 -->
 <div class="productListContainer" [style.height]="listHeight - 365 + 'px'" [style.background-image]="'url(assets/product_list/bg.png)'">
   <div class="productListBar" [style.height]="listHeight - 580 + 'px'" id="productListBarDiv">
@@ -15,5 +15,6 @@
   <div>
     <app-image [imgData]="iconListBg"></app-image>
     <div *ngFor="let icon of categoryList; let i = index" class="categoryIcon" [style.left]="i * 160 + 'px'"><img [src]="icon.class_img" width="150"></div>
+    <app-image [imgData]="iconListMask"></app-image>
   </div>
 </div>
