--- a/src/service/ui/head-bar/head-bar.component.css
+++ b/src/service/ui/head-bar/head-bar.component.css
@@ -5,6 +5,10 @@
 .facebookHead{
   width: 80px;
   height: 80px;
-  top: 18px;
+  top: 6px;
   left: 20px;
+  -moz-border-radius: 40px;
+  -webkit-border-radius: 40px;
+  border-radius:40px;
+  overflow: hidden;
 }
