--- a/src/siene/lobby/lobby/lobby.component.html
+++ b/src/siene/lobby/lobby/lobby.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-24 13:22:49
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-02 17:56:01
+ * @LastEditTime: 2021-09-03 10:59:57
 -->
-<app-product-list [categotry]="categotry" [categoryList]="categorys" [listHeight]="pageHeight"  (itemClick)="onProductItemClick($event)"></app-product-list>
+<app-product-list [categoryList]="categorys" [listHeight]="pageHeight"  (itemClick)="onProductItemClick($event)"></app-product-list>
 <app-banner></app-banner>
 <app-head-bar></app-head-bar>
 <app-bottom-bar></app-bottom-bar>
