image button add point event

--- a/src/basicUI/image-button/image-button.component.html
+++ b/src/basicUI/image-button/image-button.component.html
@@ -1,1 +1,1 @@
-<div class="imgBtn" [attr.style]="imgStyle" (click)="onButtonClick()"></div>
+<div class="imgBtn" [attr.style]="imgStyle" (click)="onButtonClick($event)"></div>
