category change animation

--- a/src/siene/lobby/product-list/product-list.component.html
+++ b/src/siene/lobby/product-list/product-list.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-04 10:57:58
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-03 14:00:48
+ * @LastEditTime: 2021-09-03 14:37:01
 -->
 <div class="productListContainer" [style.height]="listHeight - 365 + 'px'" [style.background-image]="'url(assets/product_list/bg.png)'">
   <div class="productListBar" [style.height]="listHeight - 495 + 'px'" id="productListBarDiv">
@@ -15,7 +15,9 @@
   <div>
     <app-image [imgData]="iconListBg"></app-image>
     <div class="categoryContainer">
-      <img [src]="icon.class_img" *ngFor="let icon of categoryList; let i = index" [style.left]="iconPosition(i) + 'px'" class="categoryIcon">
+      <div class="iconScrollArea" [@carousel]="carouselState">
+        <img [src]="icon.class_img" *ngFor="let icon of categoryList; let i = index" [style.left]="iconPosition(i) + 'px'" class="categoryIcon">
+      </div>
     </div>
     <app-image-button [imgData]="iconListMask" (itemClick)="changeCategory($event)"></app-image-button>
   </div>
