--- a/src/siene/shop/shop.component.css
+++ b/src/siene/shop/shop.component.css
@@ -10,3 +10,11 @@
     background-repeat: repeat-y;
     background-size:100% 100%;
 }
+.coinShop{
+    top: 138px;
+    left: 8px;
+}
+.ticketSHop{
+    top: 138px;
+    left: 8px;
+}
