--- a/src/siene/shop/bank-item/bank-item.component.html
+++ b/src/siene/shop/bank-item/bank-item.component.html
@@ -4,8 +4,13 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-06 09:52:07
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-06 09:58:56
+ * @LastEditTime: 2021-09-06 14:35:13
 -->
-<div class="bankItem">
+<div class="bankItem" [style.top]="index * 185 + 'px'">
   <app-image [imgData]="bankItemBg"></app-image>
+  <app-image [imgData]="coinIcon"></app-image>
+  <app-image [imgData]="recommendedIcon"></app-image>
+  <app-image-button [imgData]="buyBtn"></app-image-button>
+  <app-popup-text-field [textData]="coinText" [text]="coinNumberText"></app-popup-text-field>
+    <app-popup-text-field [textData]="priceText" [text]="priceNumberText"></app-popup-text-field>
 </div>
