--- a/src/siene/shop/bank-item/bank-item.component.html
+++ b/src/siene/shop/bank-item/bank-item.component.html
@@ -4,13 +4,13 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-06 09:52:07
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-06 14:41:33
+ * @LastEditTime: 2021-09-06 16:31:26
 -->
-<div class="bankItem" [style.top]="index * 185 + 'px'">
+<div class="bankItem" [style.top]="index * 185 + 'px'" #pd>
   <app-image [imgData]="bankItemBg"></app-image>
   <app-image [imgData]="coinIcon"></app-image>
   <app-image [imgData]="recommendedIcon"></app-image>
-  <app-image-button [imgData]="buyBtn" (itemClick)="buyBankItem()"></app-image-button>
+  <app-image [imgData]="buyBtn"></app-image>
   <app-popup-text-field [textData]="coinText" [text]="coinNumberText"></app-popup-text-field>
   <app-popup-text-field [textData]="priceText" [text]="priceNumberText"></app-popup-text-field>
 </div>
