--- a/src/siene/shop/shop.component.html
+++ b/src/siene/shop/shop.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-01 17:54:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-06 15:56:04
+ * @LastEditTime: 2021-09-06 16:31:56
 -->
 <div class="bankContainer" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/bank/bank_bg.jpg)'">
     <div class="listBg" [style.height]="pageHeight - 270 + 'px'" [style.background-image]="'url(assets/bank/coins.png)'"></div>
@@ -12,10 +12,10 @@
         <app-image [imgData]="coinBg"></app-image>
         <app-image [imgData]="coinIcon"></app-image>
         <app-image-button [imgData]="ticketBtn" (itemClick)="switchShop(true)"></app-image-button>
-        <app-image [imgData]="vipIcon"></app-image>
+        <app-image-button [imgData]="vipIcon"  (itemClick)="showVip()"></app-image-button>
         <div class="productsBar" [style.height]="pageHeight - 660 + 'px'" id="productsBar">
             <div class="scrollArea" [style.top]="scrollY + 'px'">
-              <app-bank-item *ngFor="let item of bankItemDatas; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onBankItemClick($event)"></app-bank-item>
+              <app-bank-item *ngFor="let item of bankItemDatas; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-bank-item>
             </div>
         </div>
     </div>
