--- a/src/siene/shop/bank-item/bank-item.component.html
+++ b/src/siene/shop/bank-item/bank-item.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-06 09:52:07
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-06 16:31:26
+ * @LastEditTime: 2021-09-06 17:00:42
 -->
-<div class="bankItem" [style.top]="index * 185 + 'px'" #pd>
+<div class="bankItem" [style.top]="index * 185 + 'px'" #itemInList>
   <app-image [imgData]="bankItemBg"></app-image>
   <app-image [imgData]="coinIcon"></app-image>
   <app-image [imgData]="recommendedIcon"></app-image>
