--- a/src/siene/shop/shop.component.html
+++ b/src/siene/shop/shop.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-01 17:54:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-06 16:31:56
+ * @LastEditTime: 2021-09-07 10:31:44
 -->
 <div class="bankContainer" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/bank/bank_bg.jpg)'">
     <div class="listBg" [style.height]="pageHeight - 270 + 'px'" [style.background-image]="'url(assets/bank/coins.png)'"></div>
@@ -13,11 +13,7 @@
         <app-image [imgData]="coinIcon"></app-image>
         <app-image-button [imgData]="ticketBtn" (itemClick)="switchShop(true)"></app-image-button>
         <app-image-button [imgData]="vipIcon"  (itemClick)="showVip()"></app-image-button>
-        <div class="productsBar" [style.height]="pageHeight - 660 + 'px'" id="productsBar">
-            <div class="scrollArea" [style.top]="scrollY + 'px'">
-              <app-bank-item *ngFor="let item of bankItemDatas; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-bank-item>
-            </div>
-        </div>
+        <app-bank-scroll-list [listHeight]="pageHeight - 660" [listData]="bankItemDatas" [textureData]="textureData"></app-bank-scroll-list>
     </div>
     <div class="ticketSHop" [hidden]="showCoinShop">
         <app-image [imgData]="ticketBg"></app-image>
