product list scroll area

--- a/src/siene/lobby/product-list/product-list.component.html
+++ b/src/siene/lobby/product-list/product-list.component.html
@@ -4,14 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-04 10:57:58
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-03 14:37:01
+ * @LastEditTime: 2021-09-07 11:50:54
 -->
-<div class="productListContainer" [style.height]="listHeight - 365 + 'px'" [style.background-image]="'url(assets/product_list/bg.png)'">
-  <div class="productListBar" [style.height]="listHeight - 495 + 'px'" id="productListBarDiv">
-    <div class="scrollArea" [style.top]="scrollY + 'px'">
-      <app-product-item *ngFor="let item of machines | slice : 0 : pageSize; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-product-item>
-    </div>
-  </div>
+<div class="productListContainer" [style.height]="pageHeight - 365 + 'px'" [style.background-image]="'url(assets/product_list/bg.png)'">
+  <app-product-scroll-list [listHeight]="pageHeight - 495" [listData]="machines | slice : 0 : pageSize" [textureData]="textureData" [pageSize]="pageSize"></app-product-scroll-list>
   <div>
     <app-image [imgData]="iconListBg"></app-image>
     <div class="categoryContainer">
