--- a/src/siene/shop/shop/shop.component.html
+++ b/src/siene/shop/shop/shop.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-01 17:54:02
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-07 10:31:44
+ * @LastEditTime: 2021-09-09 11:03:54
 -->
 <div class="bankContainer" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/bank/bank_bg.jpg)'">
     <div class="listBg" [style.height]="pageHeight - 270 + 'px'" [style.background-image]="'url(assets/bank/coins.png)'"></div>
@@ -15,10 +15,11 @@
         <app-image-button [imgData]="vipIcon"  (itemClick)="showVip()"></app-image-button>
         <app-bank-scroll-list [listHeight]="pageHeight - 660" [listData]="bankItemDatas" [textureData]="textureData"></app-bank-scroll-list>
     </div>
-    <div class="ticketSHop" [hidden]="showCoinShop">
+    <div class="ticketShop" [hidden]="showCoinShop">
         <app-image [imgData]="ticketBg"></app-image>
         <app-image-button [imgData]="coinBtn" (itemClick)="switchShop(false)"></app-image-button>
         <app-image [imgData]="ticketIcon"></app-image>
+        <app-ticket-scroll-list [listHeight]="pageHeight - 330" [textureData]="textureData"></app-ticket-scroll-list>
     </div>
     <app-head-bar></app-head-bar>
     <app-bottom-bar></app-bottom-bar>
