--- a/src/siene/shop/ticket-scroll-list/ticket-scroll-list.component.html
+++ b/src/siene/shop/ticket-scroll-list/ticket-scroll-list.component.html
@@ -1,3 +1,13 @@
-<p>
-  ticket-scroll-list works!
-</p>
+<!--
+ * @Description: 
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-09-09 10:41:31
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-09-09 11:27:30
+-->
+<div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
+  <div class="scrollArea" [style.top]="scrollY + 'px'">
+    <app-ticket-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-ticket-item>
+  </div>
+</div>
