--- a/src/siene/lobby/product-item/product-item.component.html
+++ b/src/siene/lobby/product-item/product-item.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-04 11:40:44
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-09 11:18:46
+ * @LastEditTime: 2021-09-09 15:38:54
 -->
 <div class="productItem" [style]="position" #itemInList>
   <app-image [imgData]="productBg"></app-image>
@@ -12,8 +12,9 @@
       <img src={{itemData.img}} width="320px" height="308px" class="productImage" (load)="onImgload()">
     </div>
   <app-image [imgData]="vipFlag"></app-image>
-  <app-image [imgData]="coinIcon"></app-image>
+  <app-image [imgData]="coinIcon" *ngIf="!isFree"></app-image>
   <app-image [imgData]="infoIcon"></app-image>
-  <app-text-field [positionRect]="priceRect" [text]="''+itemData.price" [color]="textColor" [size]="textSize" [bold]="true" [align]="textAlign"></app-text-field>
+  <app-image [imgData]="freeIcon" *ngIf="isFree"></app-image>
+  <app-text-field [positionRect]="priceRect" [text]="''+itemData.price" [color]="textColor" [size]="textSize" [bold]="true" [align]="textAlign" *ngIf="!isFree"></app-text-field>
   <app-text-field [positionRect]="nameRect" [text]="itemData.name" [color]="textColor" [size]="textSize" [bold]="true" [align]="textAlign"></app-text-field>
 </div>
