--- a/src/siene/lobby/product-item/product-item.component.html
+++ b/src/siene/lobby/product-item/product-item.component.html
@@ -4,14 +4,14 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-04 11:40:44
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-09 15:38:54
+ * @LastEditTime: 2021-09-09 15:48:08
 -->
 <div class="productItem" [style]="position" #itemInList>
   <app-image [imgData]="productBg"></app-image>
     <div class="productPic">
       <img src={{itemData.img}} width="320px" height="308px" class="productImage" (load)="onImgload()">
     </div>
-  <app-image [imgData]="vipFlag"></app-image>
+  <app-image [imgData]="vipFlag" *ngIf="isVip"></app-image>
   <app-image [imgData]="coinIcon" *ngIf="!isFree"></app-image>
   <app-image [imgData]="infoIcon"></app-image>
   <app-image [imgData]="freeIcon" *ngIf="isFree"></app-image>
