open product info popup

--- a/src/siene/lobby/product-item/product-item.component.html
+++ b/src/siene/lobby/product-item/product-item.component.html
@@ -13,7 +13,7 @@
     </div>
   <app-image [imgData]="vipFlag" *ngIf="isVip"></app-image>
   <app-image [imgData]="coinIcon" *ngIf="!isFree"></app-image>
-  <app-image-button [imgData]="infoIcon" (itemClick)="showInfo()"></app-image-button>
+  <app-image [imgData]="infoIcon"></app-image>
   <app-image [imgData]="freeIcon" *ngIf="isFree"></app-image>
   <app-text-field [positionRect]="priceRect" [text]="''+itemData.price" [color]="textColor" [size]="textSize" [bold]="true" [align]="textAlign" *ngIf="!isFree"></app-text-field>
   <app-text-field [positionRect]="nameRect" [text]="itemData.name" [color]="textColor" [size]="textSize" [bold]="true" [align]="textAlign"></app-text-field>
