--- a/src/popups/product-info/product-info.component.css
+++ b/src/popups/product-info/product-info.component.css
@@ -8,3 +8,19 @@
     -webkit-border-radius: 15px;
     border-radius:15px;
 }
+.tipTextStyle{
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    pointer-events: none;
+    left: 25px;
+    top: 860px;
+    width: 700px;
+    height: 170px;
+    text-align: center;
+}
+.tipSpan{	
+    color:#FFFFFF;
+    font-size: 50px;
+	font:"arialbd";
+    stroke:2px #760B05;
+}
