--- a/src/siene/lobby/product-item/product-item.component.css
+++ b/src/siene/lobby/product-item/product-item.component.css
@@ -2,6 +2,9 @@
   -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
   border-radius:15px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  pointer-events: none;
 }
 .productPic{
   left: 14px;
