--- a/src/siene/lobby/product-item/product-item.component.html
+++ b/src/siene/lobby/product-item/product-item.component.html
@@ -4,9 +4,9 @@
  * @Author: Wayne Yu
  * @Date: 2021-06-04 11:40:44
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-09 17:14:52
+ * @LastEditTime: 2021-09-10 14:29:28
 -->
-<div class="productItem" [style]="position" #itemInList>
+<div class="productItem" [style]="position" [attr.itemdata]="index" #itemInList>
   <app-image [imgData]="productBg"></app-image>
     <div class="productPic">
       <img src={{itemData.img}} width="320px" height="308px" class="productImage" (load)="onImgload()">
