--- a/src/service/ui/head-bar/head-bar.component.html
+++ b/src/service/ui/head-bar/head-bar.component.html
@@ -4,14 +4,14 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 13:36:53
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-02 14:42:00
+ * @LastEditTime: 2021-09-10 15:53:03
 -->
 <div class="head">
   <app-image [imgData]="topBarBg"></app-image>
   <div class="facebookHead">
     <img src="{{headIcon}}" width="80" height="80">
   </div>
-  <app-image [imgData]="headMask"></app-image>
+  <app-image-button [imgData]="headMask"  (itemClick)="gotoUserCenter()"></app-image-button>
   <app-image [imgData]="vipIcon" *ngIf="isVip"></app-image>
   <app-image [imgData]="coinsBg1"></app-image>
   <app-image [imgData]="coinsBg2"></app-image>
