--- a/src/siene/my/user-center/user-center.component.html
+++ b/src/siene/my/user-center/user-center.component.html
@@ -4,12 +4,14 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-10 15:17:37
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-14 10:30:00
+ * @LastEditTime: 2021-09-14 10:39:03
 -->
 <div class="userCenterContainer" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
   <div class="facebookHead">
     <img src="{{headIcon}}" width="140" height="140">
   </div>
+  <app-image [imgData]="headMask"></app-image>
+  <app-image [imgData]="vipIcon" *ngIf="isVip"></app-image>
   <app-image [imgData]="coinBg"></app-image>
   <app-image [imgData]="ticketBg"></app-image>
   <app-image [imgData]="coinIcon"></app-image>
