--- a/src/siene/my/user-center/user-center.component.html
+++ b/src/siene/my/user-center/user-center.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-10 15:17:37
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-14 10:39:03
+ * @LastEditTime: 2021-09-14 10:48:03
 -->
 <div class="userCenterContainer" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
   <div class="facebookHead">
@@ -19,5 +19,7 @@
   <app-image-button [imgData]="plusBtn" (itemClick)="gotoBank()"></app-image-button>
   <app-text-field [positionRect]="coinsRect" [text]="''+coinNumber" [color]="textColor" [size]="textSize" [bold]="true"></app-text-field>
   <app-text-field [positionRect]="ticketsRect" [text]="''+ticketNumber" [color]="textColor" [size]="textSize" [bold]="true"></app-text-field>
+  <app-popup-text-field [textData]="userNameText" [text]="userNameString"></app-popup-text-field>
+  <app-popup-text-field [textData]="userIdText" [text]="userIdString"></app-popup-text-field>
   <app-bottom-bar></app-bottom-bar>
 </div>
