--- a/src/siene/my/user-center-item/user-center-item.component.html
+++ b/src/siene/my/user-center-item/user-center-item.component.html
@@ -1,3 +1,11 @@
-<p>
-  user-center-item works!
-</p>
+<!--
+ * @Description: 
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-09-14 11:43:09
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-09-14 13:00:25
+-->
+<div class="ticketItem" [style.top]="index * 146 + 10 + 'px'" #itemInList>
+  <app-image [imgData]="itemBg"></app-image>
+</div>
