--- a/src/siene/my/user-center-scroll-list/user-center-scroll-list.component.html
+++ b/src/siene/my/user-center-scroll-list/user-center-scroll-list.component.html
@@ -1,3 +1,13 @@
-<p>
-  user-center-scroll-list works!
-</p>
+<!--
+ * @Description: 
+ * @version: 1.0
+ * @Author: Wayne Yu
+ * @Date: 2021-09-14 11:49:12
+ * @LastEditors: Wayne Yu
+ * @LastEditTime: 2021-09-14 11:58:36
+-->
+<div class="scrollBar" [style.height]="listHeight + 'px'" #scrollBar>
+  <div class="scrollArea" [style.top]="scrollY + 'px'">
+    <app-user-center-item *ngFor="let item of listData; let i = index" [itemData]="item" [textureData]="textureData" [index]="i" (itemClick)="onItemClick($event)"></app-user-center-item>
+  </div>
+</div>
