--- a/src/siene/my/user-center-item/user-center-item.component.html
+++ b/src/siene/my/user-center-item/user-center-item.component.html
@@ -4,8 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-14 11:43:09
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-14 13:00:25
+ * @LastEditTime: 2021-09-14 13:34:11
 -->
 <div class="ticketItem" [style.top]="index * 146 + 10 + 'px'" #itemInList>
   <app-image [imgData]="itemBg"></app-image>
+  <app-image [imgData]="arrow"></app-image>
+  <app-image [imgData]="mainIcon"></app-image>
+  <app-popup-text-field [textData]="tipText" [text]="tipString"></app-popup-text-field>
 </div>
