--- a/src/siene/about-us/about-us.component.html
+++ b/src/siene/about-us/about-us.component.html
@@ -4,10 +4,11 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-14 14:46:55
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-14 15:37:02
+ * @LastEditTime: 2021-09-14 15:53:33
 -->
 <div class="aboutUsPage" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
   <app-image [imgData]="gameIcon"></app-image>
+  <app-image [imgData]="title"></app-image>
   <app-image-button [imgData]="backBtn" (itemClick)="gotoBack()"></app-image-button>
   <div class="textShadow">
     <app-popup-text-field [textData]="gameNameText" [text]="gameNameString"></app-popup-text-field>
