sound settings ui

--- a/src/siene/my/sound-and-logout/sound-and-logout.component.html
+++ b/src/siene/my/sound-and-logout/sound-and-logout.component.html
@@ -4,7 +4,7 @@
  * @Author: Wayne Yu
  * @Date: 2021-09-16 13:14:54
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-16 13:48:54
+ * @LastEditTime: 2021-09-16 15:55:39
 -->
 <div class="soundAndLogoutPage" [style.height]="pageHeight + 'px'" [style.background-image]="'url(assets/loading_ui/loading_bg.jpg)'">
   <app-image [imgData]="title"></app-image>
@@ -12,6 +12,10 @@
   <app-image-button [imgData]="logoutBtn" (itemClick)="logout()"></app-image-button>
   <app-image [imgData]="soundEffectSettingBg"></app-image>
   <app-image [imgData]="musicSettingBg"></app-image>
+  <app-image-button [imgData]="soundEffectOnBtn" (itemClick)="setSoundEffect( true )" *ngIf="soundEffectOn"></app-image-button>
+  <app-image-button [imgData]="soundOnBtn" (itemClick)="setMusic( true )" *ngIf="soundOn"></app-image-button>
+  <app-image-button [imgData]="soundEffectOffBtn" (itemClick)="setSoundEffect( false )" *ngIf="!soundEffectOn"></app-image-button>
+  <app-image-button [imgData]="soundOffBtn" (itemClick)="setMusic( false )" *ngIf="!soundOn"></app-image-button>
   <div class="textShadow">
     <app-popup-text-field [textData]="soundEffectText" [text]="soundEffectString"></app-popup-text-field>
     <app-popup-text-field [textData]="musicText" [text]="musicString"></app-popup-text-field>
