video status in android

--- a/src/siene/video/video/video.component.html
+++ b/src/siene/video/video/video.component.html
@@ -4,11 +4,10 @@
  * @Author: Wayne Yu
  * @Date: 2021-05-26 16:46:50
  * @LastEditors: Wayne Yu
- * @LastEditTime: 2021-09-02 13:48:22
+ * @LastEditTime: 2021-09-22 11:58:40
 -->
 <div class="videoFrame">
-    <img src="assets/control_bar/tv.gif" class="tvGif" [style.top]="tvPositionY + 'px'" *ngIf="videoLoading"/>
-    <iframe src="assets/video/video.html" width="750" height="{{iframeHeight}}" id="videoFrame" scrolling="no" [hidden]="videoLoading"></iframe>
+    <iframe src="assets/video/video.html" width="750" height="{{iframeHeight}}" id="videoFrame" scrolling="no"></iframe>
 </div>
 <app-head-bar></app-head-bar>
 <app-image-button [imgData]="backToLobbyBtn" (itemClick)="backToLobby()"></app-image-button>
